--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@google-cloud/storage": "^2.4.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.2.0",
     "express": "~4.16.0",
     "morgan": "~1.9.0"
   }
